--- a/styles.css
+++ b/styles.css
@@ -1,48 +1,56 @@
+
 p{
   font-family: Hanken Grotesk,Arial;
   color: white;
 }
 .score-info{
   background-color: hsl(252, 100%, 67%);
-  width: 240px;
+  width: 100%;
   text-align: center;
+  align-items: center;
   position: relative;
-  border-radius: 10px;
-  display: inline-block;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   
   
 }
 .score-fig{
   background-color: hsla(256, 72%, 46%, 0.7);
-  width: 120px;
-  height:120px;
+  width: 150px;
+  height:150px;
   text-align: center;
-  border-radius: 60px;
-  position: absolute;
+  border-radius: 75px;
+  /* position: absolute;
   margin-top: 20px;
-  top: 80px;
-  left: 90px;
+  top: 70px;
+  left: 110px; */
+  
   
 }
 .score-number{
   font-weight: 800;
-  font-size: 40px;
+  font-size: 50px;
   margin-bottom: 0;
   margin-top: 25px;
+  padding-top: 10px;
   
 }
 .overall-score{
   margin-top: 0;
-  padding-bottom: 20px;
+
 }
 .score{
   padding-top: 25px;
-  margin-bottom: 150px;
+  margin-bottom: 25px;
+  font-size: 25px;
 }
 
 .remark{
   font-weight: 800;
-  font-size: 20px;
+  font-size: 25px;
   display: inline-block;
   margin: 0;
 }
@@ -51,36 +59,40 @@ p{
 }
 .score-comment{
   display: inline-block;
-  font-size: 13px;
-  width: 180px;
+  font-size: 20px;
+  width: 350px;
   padding-bottom: 30px;
 }
 .list00{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
-  width: 500px;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
-  margin-left: 20px;
-  margin-top: 20px;
-  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.15);
+  
   
 }   
 .second-div{
   display: flex;
   flex-direction: column;
   background-color: white;
-  width: 210px;
-  height: 270px;
+  width: 100%;
+  min-height: 500px;
   margin-left: 20px;
+  padding-bottom: 20px;
   justify-content: space-between;
 }
 
 .summary{
   font-family: Hanken Grotesk,Arial;
   font-weight: 700;
+  font-size: 30px;
   color: hsl(224, 30%, 27%);
+  margin-top: 25px;
+  margin-bottom: 25px;
 }
 .list{
   display: flex;
@@ -88,8 +100,8 @@ p{
   justify-content: space-between;
   align-items: center;
   background-color: hsla(0, 100%, 67%, 0.05 );
-  width: 200px;
-  height: 35px;
+  margin-right: 20px;
+  height: 65px;
   padding-left: 10px;
   border-radius: 10px;
   
@@ -105,29 +117,29 @@ p{
 .note-section1{
   font-family: Hanken Grotesk,Arial;
   font-weight: 700;
-  margin-left: -70px;
-  font-size: 13px;
+  margin-left: -200px;
+  font-size: 18px;
   color: hsla(0, 100%, 67%, 0.8);
 }
 .note-section2{
   font-family: Hanken Grotesk,Arial;
   font-weight: 700;
-  margin-left: -70px;
-  font-size: 13px;
+  margin-left: -200px;
+  font-size: 18px;
   color: hsla(39, 100%, 56%, 0.8);
 }
 .note-section3{
   font-family: Hanken Grotesk,Arial;
   font-weight: 700;
-  margin-left: -80px;
-  font-size: 13px;
+  margin-left: -210px;
+  font-size: 18px;
   color: hsla(166, 100%, 37%, 0.8);
 }
 .note-section4{
   font-family: Hanken Grotesk,Arial;
   font-weight: 700;
-  margin-left: -80px;
-  font-size: 13px;
+  margin-left: -210px;
+  font-size: 18px;
   color: hsla(234, 85%, 45%, 0.8);
 }
 .total{
@@ -137,7 +149,9 @@ p{
   font-family: Hanken Grotesk,Arial;
   font-weight: 700;
   background-color: hsl(224, 30%, 27%);
-  padding: 10px 75px 10px 75px;
+  margin-top: 15px;
+  padding: 20px 50px 20px 50px;
+  width: 95%;
   border-radius: 20px;
   border: none;
   color: white;
